--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -20,8 +20,8 @@ Adibidez, hurrengo klaseak katu oso sinple bat irudikatzen du, maullatzeko funtz
 
 ```python
 class Katua:
-def maulla (self):
-print ("Miau")
+  def miaukatu(self):
+    print ("Miau")
 ```
 
 Ikus daitekeenez, klasea definitzeko, `class 'hitza erabiliko dugu, eta, ondoren, klasearen izena, lehenengo letra maiuskulaz. Bloke horren barruan doan guztia ikasgelaren parte izango da.
@@ -34,7 +34,7 @@ Klasea katuaren definizioa besterik ez da. Baina gure programan katu bat sortzek
 
 ```python
 gato = Katua ()
-gato.maulla ()
+gato.miaukatu()
 ```
 
 Pantailan honako hauek ikusiko ditugu:
@@ -51,20 +51,20 @@ Idatzi lo egiteko, jateko eta agurtzeko metodoak dituen Pertsona izeneko klase b
 
 ```python
 class Pertsona:
-def dormir (self):
-print ("ZZZZZ...")
+    def loEgin(self):
+        print("ZZZZZ...")
 
-def jan (self):
-print ("Ñam, Ñam...")
+    def jan(self):
+        print("Ñam, Ñam...")
 
-def saludar (self):
-print ("Kaixo, zer moduz!")
+    def kaixo(self):
+        print("Kaixo, zer moduz!")
 
-pertsona = Pertsona ()
+pertsona = Pertsona()
 
-pertsona.lo egitea ()
-pertsona.jatea ()
-pertsona.agurtu ()
+pertsona.loEgin()
+pertsona.jan()
+pertsona.kaixo()
 ```
 
 Emaitza:
@@ -82,21 +82,21 @@ Orain dela gutxi definitu dugun katu hori. Izen bat emango diogu. Gainera, funtz
 
 ```python
 class Katua:
-def __init__ (self, izena):
-self.izena = izena
+  def __init__ (self, izena):
+    self.izena = izena
 
-def maulla (self):
-print ("Miau, naiz", self.izena)
+  def miaukatu (self):
+    print("Miau, naiz", self.izena)
 ```
 
 Orain, katu klaseko objektuak sortzen ditugunean, izen bat emango diogu, eta hau jabego gisa geratuko da:
 
 ```python
-gato = Katua ("Pixi")
-gato.maulla ()
+gato = Katua("Pixi")
+gato.miaukatu()
 
-Beste katu bat = Katua ("Txeto")
-beste katea.maulla ()
+Beste katu bat = Katua("Txeto")
+beste katea.miaukatu()
 ```
 
 Eta kasu honetan ikusiko dugu:
@@ -113,13 +113,15 @@ Horrez gain, `decirHola«izeneko metodo bat erantsiko duzu, eta, pantailan, osas
 
 ```python
 class Kaixo:
-def __init__ (self):
-self.saludo = "Kaixo"
-def decirHola (self):
-print (self.agurra)
+    def __init__(self):
+        self.agurra = "Kaixo"
 
-hola = Hola ()
-hola.decirHola ()
+    def esanKaixo (self):
+        print(self.agurra)
+
+
+hola = Hola()
+hola.esanKaixo()
 ```
 
 Emaitza:
@@ -133,17 +135,17 @@ Herentzia kodea berrerabiltzeko klaseek duten mekanismo bat da. Demagun katakume
 Txakurkume klaseak Katu klasetik heredatu ahal izango luke, honela:
 
 ```python
-class Cachorro (Katua):
-def ronea (self):
-print ("Purrrr")
+class Katakumea (Katua):
+  def purrustatu self):
+    print ("Purrrr")
 ```
 
 Orain honako hau egin dezakegu. Txakurkume objektu bat sortzea, Katu klasearen propietate berberekin. Automatikoki jarauntsiko ditu jabetza (izena) eta metodo hau:
 
 ```python
-katutxoa = Txakurkumea ("Lucifur")
-gatito.ronronea ()
-gatito.maulla ()
+katutxoa = Katakumea ("Lucifur")
+katutxoa.purrustatu()
+katutxoa.miaukatu()
 ```
 
 Honela ikusiko litzateke:
@@ -160,12 +162,12 @@ Adibidez, aurreko kasuan, `Cachorroere 'azpimailatik berezko eraikitzaile bat ge
 
 ```python
 class Cachorro (Katua):
-def __init__ (self, izena):
-super () .__init__ (izena)
-print ("Gatete sortua")
+  def __init__ (self, izena):
+    super () .__init__ (izena)
+    print ("Katakumea sortua")
 
-def ronea (self):
-print ("Purrrr")
+  def ronea (self):
+    print ("Purrrr")
 ```
 
 5.2 ariketa
@@ -175,20 +177,21 @@ Sortu instantzia bat `Frutaa 'klasea probatzeko.
 
 ```python
 class Janaria:
-def __init__ (self, izena):
-self.izena = izena
+    def __init__(self, izena):
+        self.izena = izena
 
-class Fruta (Janaria):
-def __init__ (self, izena, bitaminak):
-super () .__init__ (izena)
-self.vitaminak = bitaminak
 
-def info (self):
-#return f "{self.nombre} {self.vitaminas}";
-return self.nombre + "" + str (self.vitaminak)
+class Fruitua(Janaria):
+    def __init__(self, izena, bitaminak):
+        super().__init__(izena)
+        self.bitaminak = bitaminak
 
-postre = Fruta ("Kiwi", [A "," C "])
-print (postre.info ()
+    def info(self):
+        # return f"{self.izena} {self.bitaminak}";
+        return self.izena + " " + str(self.bitaminak)
+
+postrea = Fruitua("Kiwi", ["A", "C"])
+print(postrea.info())
 
 ```
 
@@ -198,22 +201,22 @@ Emaitza:
 Kiwi ['A', 'C']
 ```
 
-## Kapsularatzea
+## Enkapsulazioa
 
 Katuaren adibidean, zuzenean sar daiteke izena jabetzara.
 Horretarako, objektuetan nahikoa da horrelako zerbait jartzea:
 
 ```python
-objektua. IzenaJabetza
+objektua.IzenaJabetza
 ```
 
 Katuak izena izeneko propietate bat du.
 
 ```python
-miGato = Katua ("Pixi")
-print (miGato.nombre) #Pixi
-miGato.nombre = "Pixel"
-miGato.maulla () #Miau, Pixel naiz
+nireKatua = Katua ("Pixi")
+print (nireKatua.izena) #Pixi
+nireKatua.izena = "Pixel"
+nireKatua.miaukatu () #Miau, Pixel naiz
 ```
 
 Propietate bat hain zuzenean eskuratzea ez dago gaizki, baina ni bezalako programatzaile onak klasea kapsulatzen saiatzen gara. Zer esan nahi du horrek? Ezin direla zuzenean haren propietateak edo metodoak sartu edo aldatu. Klasea erabiltzen dutenentzat beharrezkoa dena bakarrik.
@@ -222,9 +225,9 @@ Bestela esanda, programatzaileek "kutxa beltzak" diruditen klaseak sortzen saiat
 Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
 
 ```python
-@property
-def izena ():
-return self._izena
+  @property
+  def izena ():
+    return self._izena
 ```
 
 Izenaren balioa aldatu ahal izateko metodo bat, "setter" ere esaten zaiona:
@@ -232,38 +235,38 @@ Izenaren balioa aldatu ahal izateko metodo bat, "setter" ere esaten zaiona:
 ```python
 @nombre.setter
 def izena (izena):
-if izena! = "":
-self._izena = izena
+  if izena! = "":
+    self._izena = izena
 ```
 
 Klasea honela geratuko litzateke:
 
 ```python
 class Katua:
-def __init__ (self, izena):
-self._izena = izena
+  def __init__ (self, izena):
+    self._izena = izena
 
-@property
-def izena ():
-return self._izena
+  @property
+  def izena ():
+    return self._izena
 
-@nombre.setter
-def izena (izena):
-if izena! = "":
-self._izena = izena
+  @nombre.setter
+  def izena (izena):
+    if izena! = "":
+      self._izena = izena
 
-def maulla (self):
-print ("Miau, naiz", self.izena)
+  def miaukatu (self):
+    print ("Miau, ni naiz ", self.izena)
 ```
 
 Ikus ezazu propietatea `izena`dela orain. Jabetza hori "pribatua" dela adierazteko modu bat da, eta ez litzatekeela ikasgelatik kanpo eskuratu behar.
 Orain, "Izena" izeneko klasea erabiltzen dugunean, funtzio berri horien bidez egingo da.
 
 ```python
-miGato = Katua ("Pixi")
-print (miGato.nombre) #deitu `def izena () metodora:
-miGato.nombre = "Pixel" #deitu `def izena (izena) metodora:
-miGato.maulla () #Miau, Pixel naiz
+nireKatua = Katua ("Pixi")
+print (nireKatua.izena) #deitu `def izena () metodora:
+nireKatua.izena = "Pixel" #deitu `def izena (izena) metodora:
+nireKatua.miaukatu () #Miau, ni naiz Pixel
 ```
 
 5.3 ariketa
@@ -272,31 +275,34 @@ Idatz ezazu `Vehiculoere 'klasea definituko duen programa bat, "matrikula" atrib
 
 ```python
 class Ibilgailua:
-def __init__ (self, matrikula):
-self._matricula = matricula
+    def __init__(self, matrikula):
+        self._matrikula = matrikula
 
-@property
-def matrikula (self):
-return self._matrikula
+    @property
+    def matrikula (self):
+        return self._matrikula
 
-@matricula.setter
-def matrikula (self, matrikula):
-self._matricula = matricula
-def arrancar (self):
-print ("Abiatzen", self._matrikula)
+    @matrikula.setter
+    def matrikula (self, matrikula):
+        self._matrikula = matrikula
 
-class Autoa (Ibilgailua):
-def __init__ (self, matrikula, modeloa, kolorea):
-super () .__init__ (matrikula)
-self._modelo = modelo
-self._color = color
+    def abiarazi (self):
+        print("Abiarazten ", self._matrikula)
 
-def info (self):
-return f "{self.matricula} {self._modelo} {self._color}";
 
-auto = auto ("0042ASI", "Opel Corsa", "zuri")
-martxan jartzeko kotxea ()
-print (kotxe.info ())
+class Kotxea(Ibilgailua):
+    def __init__(self, matrikula, modeloa, kolorea):
+        super().__init__(matrikula)
+        self._modeloa = modeloa
+        self._kolorea = kolorea
+
+    def info (self):
+        return f"{self.matrikula} {self._modeloa} {self._kolorea}";
+
+
+kotxea = Kotxea("0042ASI", "Opel Corsa", "Zuria")
+kotxea.abiarazi()
+print(kotxea.info())
 
 ```
 
@@ -304,7 +310,7 @@ Emaitza:
 
 ```console
 0042ASI abiarazten
-0042ASI Opel Corsa Blanco
+0042ASI Opel Corsa Zuria
 ```
 
 Zer abantaila izan dezake kapsularatzeak?
@@ -321,27 +327,27 @@ Klaseek, beraz, beste mota batzuetako propietateak edo beste klase batzuetako ze
 
 ```python
 class Ikaslea:
-def __init__ (self, izena):
-self._izena = izena
+  def __init__ (self, izena):
+    self._izena = izena
 
 class Gela:
-def __init__ (self):
-self._estudiantes = []
+  def __init__ (self):
+    self._ikaleak = []
 
-def meteAlumno (self, ikaslea):
-self._alumnos.append (ikaslea)
+  def sartuIkaslea (self, ikaslea):
+    self._ikaleak.append (ikaslea)
 
-def pasarLista (self):
-for ikaslea in self._ikasleak:
-print (ikaslea_izena)
+  def listaPasa (self):
+    for ikaslea in self._ikasleak:
+      print (ikaslea.izena)
 
 alumno1 = Ikaslea ("Gumball")
 alumno2 = Ikaslea ("Darwin")
 
 gela = Gela ()
-ikasgela.meteIkaslea (1. ikaslea)
-ikasgela.meteIkaslea (2. ikaslea)
-aula.pasaLista ()
+gela.sartuIkaslea ("Kepa")
+gela.sartuIkaslea ("Amets")
+gela.listaPasa ()
 ```
 
 Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
@@ -351,40 +357,44 @@ Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
 Idatz ezazu programa bat, `Piloto«atributua» eta «get/set» funtzioak dituena. Era berean, sor ezazu `Aeroplana» izeneko klase bat, eredu, pilotu eta kopilotu atributuarekin, get/set funtzioekin modelorako, eta beste metodo batekin, «volard» izenekoa. Sortu instantzia bat bi klaseak probatzeko.
 
 ```python
-class pilotua:
-def __init__ (self, izena):
-self._izena = izena
 
-@property
-def izena (self):
-return self._izena
+class Pilotoa:
+    def __init__(self, izena):
+        self._izena = izena
 
-@nombre.setter
-def izena (self, izena):
-self._izena = izena
+    @property
+    def izena (self):
+        return self._izena
 
-class Aeroplanoa:
-def __init__ (self, modeloa, pilotua, kopilotua):
-self._modelo = modelo
-self._pilotua = pilotua
-self._kopilotua = kopilotua
+    @izena.setter
+    def izena (self, izena):
+        self._izena = izena
 
-@property
-def modeloa (self):
-return self._modelo
 
-@modelo.setter
-def eredua (self, modeloa):
-self._modelo = modelo
 
-def volar (self):
-return f "Hegan {self._modelo} {self._piloto.nombre} {self._copiloto.nombre}"
+class Hegazkina:
+    def __init__(self, modeloa, pilotoa, koPilotoa):
+        self._modeloa = modeloa
+        self._pilotoa = pilotoa
+        self._koPilotoa = koPilotoa
 
-pilotu1 = Pilotua ("Han Solo")
-pilotu2 = pilotua ("Murdock")
-avioneta = Aireplanoa ("AirBluff 727", pilotu1, pilotu2)
+    @property
+    def modeloa (self):
+        return self._modeloa
 
-print (avioneta.volar ())
+    @modeloa.setter
+    def modeloa (self, modeloa):
+        self._modeloa = modeloa
+
+    def info (self):
+        return f"{self._modeloa} modeloa, {self._pilotoa.izena} eta {self._koPilotoa.izena}rekin hegaldia egiten"
+
+
+pilotoa1 = Pilotoa("Han Solo")
+pilotoa2 = Pilotoa("Murdock")
+hegazkinTxikia = Hegazkina("AirBluff 727", pilotoa1, pilotoa2)
+
+print(hegazkinTxikia.info())
 
 ```
 
@@ -408,11 +418,11 @@ Adibidez, izen bat emanda, formatu zuzena ematen dion eskola bat egin dezakegu, 
 
 ```python
 class Formatua:
-@staticmethod
-def formatua (izena):
-return izena [0] .upper () + izena [1:] .lower ()
+  @staticmethod
+  def zuzendu (izena):
+  r eturn izena [0] .upper () + izena [1:] .lower ()
 
-print (Formato.formato ("gUmBaLl"))
+  print (Formatua.zuzendu("gUmBaLl"))
 ```
 
 Emaitza:
@@ -429,12 +439,12 @@ Idatzi programa bat, `Numeroa 'izeneko klase bat definituko duena, eta funtzio e
 import random
 
 class Zenbakia:
-@staticmethod
-def aleatorioa (max):
-return random.randint (0, max)
+    @staticmethod
+    def ausazkoa (max):
+      return random.randint(0, max)
 
-for i in range (5):
-print (Zenbakia.aleatorioa (10))
+for i in range(5):
+  print(Zenbakia.ausazkoa(10))
 ```
 Emaitza:
 
@@ -458,21 +468,20 @@ Sortu gelako instantzia bat eta deitu bere funtzioetara.
 
 ```python
 class Instrumentua:
-def __init__ (self, izena, mota):
-self._izena = izena
-self._tipo = mota
+    def __init__(self, izena, mota):
+        self._izena = izena
+        self._mota = mota
 
-def ukitu (self):
-print ("Ukitzen", self._izena)
+    def jotzea (self):
+        print("Jotzen ", self._izena, "jotzen")
 
-def info (self):
-return f "{self._nombre} {self._tipo}"
-
-miGitarra = Instrumentua ("Gitarra", "soka")
-miGuitarra.jo ()
-print (miGuitarra.info ())
+    def info (self):
+        return f"${self._izena} ${self._mota}"
 
 
+nireGitarra = Instrumentua("Gitarra", "klasikoa")
+nireGitarra.jotzea()
+print(nireGitarra.info())
 ```
 Emaitza:
 
@@ -486,25 +495,29 @@ Hari-gitarra
 Idatz ezazu programa bat, `NombreFormateado" izeneko klase bat definituko duena, eta, bertan, etxegile bat agertuko da, eta `izena 'eta `abizena' izeneko funtzio bat ere izango du. Sortu zure ustez egokiak diren eginkizun osagarriak.
 
 ```python
-class IzenaFormateatua:
-def __init__ (self, izena, abizena):
-self._izena = izena
-self._apellidos = abizena
+class IzenZuzena:
+    def __init__(self, izena, abizena):
+        self._izena = izena
+        self._abizena = abizena
 
-def formateatu (self):
-return self._zuzendu (self._izena) + "+ self._zuzendu (self._abizena)
+    def zuzendu (self):
+        return self._zuzendu(self._izena) + " " + self._zuzendu(self._abizena)
 
-def _zuzendu (self, katea):
-return self._primero (cadena) + self._resto (cadena)
 
-def _lehenengoa (self, katea):
-return cadena [0] .upper ()
+    def _zuzendu (self, hizkiak):
+        return self._lehenengo(hizkiak) + self._gainera(hizkiak)
 
-def _hondarra (self, katea):
-return cadena [1: len (katea)] .lower ()
 
-formateatzailea = Formateatua ("JUAN", "PÉREZ")
-print (formateatzailea.formatear ())
+    def _lehenengo (self, hizkiak):
+        return hizkiak[0].lower()
+
+
+    def _gainera (self, hizkiak):
+        return hizkiak[1:len(hizkiak)].lower()
+
+
+zuzentzailea = IzenZuzena("JUAN", "PÉREZ")
+print(zuzentzailea.zuzendu())
 ```
 
 Emaitza:
@@ -518,41 +531,43 @@ Juan Pérez
 Idatz ezazu programa bat `Sumador, 'izeneko klase bat definitzeko, eta bi zenbakirekin idatzi. Bientzako get eta set funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie 0 esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen "batuketa" funtzioa izango dute.
 
 ```python
-class Batugailua:
-def __init__ (self, valor1, valor2):
-self.valor1 = valor1
-self.valor2 = valor2
+class Batuketa:
+    def __init__(self, balio1, balio2):
+        self.balio1 = balio1
+        self.balio2 = balio2
 
-@property
-def valor1 (self):
-return self._valor1
+    @property
+    def balio1 (self):
+        return self._balio1
 
-@valor1.setter
-def valor1 (self, valor1):
-if balora1 > 0:
-self._valor1 = valor1
-LKse:
-self._valor1 = 0
+    @balio1.setter
+    def balio1 (self, balio1):
+        if balio1 > 0:
+            self._balio1 = balio1
+        else:
+            self._balio1 = 0
 
-@property
-def valor2 (self):
-return self._valor2
+    @property
+    def balio2 (self):
+        return self._balio2
 
-@valor2.setter
-def valor2 (self, valor2):
-if balora2 > 0:
-self._valor2 = valor2
-LKse:
-self._valor2 = 0
+    @balio2.setter
+    def balio2 (self, balio2):
+        if balio2 > 0:
+            self._balio2 = balio2
+        else:
+            self._balio2 = 0
 
-def batuketa (self):
-return self._valor1 + self._valor2
+    def batu (self):
+        return self._balio1 + self._balio2
 
-sumador = Batugaia (28, 14)
-print (batuketa)
-sumador.valor1 = 600
-sumador.valor2 = 66
-print (batuketa)
+
+batuketa = Batuketa(28, 14)
+print(batuketa.batu())
+
+batuketa.balio1 = 600
+batuketa.balio2 = 66
+print(batuketa.batu())
 ```
 
 Emaitza:
@@ -569,20 +584,20 @@ Sortu programa bat `Monedaa 'izeneko klase batekin. Klaseak eraikitzaile huts ba
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max)
+def ausazkoa (max):
+    return random.randint(0, max)
 
-class Moneta:
-def tira (self):
-aldeak = ["aurpegia", "gurutzea"]
-kopurua = ausazkoa (1)
+class Txanpona:
+    def bota (self):
+        aldeak = ["aurpegi", "gurutze"]
+        zenbakia = ausazkoa(1)
 
-[zenbakia] aldeak itzultzen dituzte
+        return aldeak[zenbakia]
 
-moneta = Moneta ()
+txanpona = Txanpona()
 
-for i in range (10):
-print (moneda.tirar ())
+for i in range(10):
+    print(txanpona.bota())
 ```
 
 Emaitza:
@@ -610,42 +625,43 @@ Sor itzazu 6 aurpegiko dado bat, 10 aurpegiko dado bat eta zeroak ahalbidetzen d
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max)
+def ausazkoa (maximoa):
+    return random.randint(0, maximoa)
 
-class Dado:
-def __init__ (self, aldeak = 6, onartuCero = False):
-self._aldeak = alboak
-self._admiteCero = Zero onartzen du
+class Dadoa:
+    def __init__(self, aldeak = 6, zeroOnartu = False):
+        self._aldeak = aldeak
+        self._zeroOnartu = zeroOnartu
 
-@property
-def lados (self):
-return self._aldeak
+    @property
+    def aldeak (self):
+        return self._aldeak
 
-@lados.setter
-def aldeak (self, aldeak):
-self._aldeak = alboak
+    @aldeak.setter
+    def aldeak (self, aldeak):
+        self._aldeak = aldeak
 
-@property
-defCero onartzen du (self):
-return self._admiteZero
+    @property
+    def zeroOnartu (self):
+        return self._zeroOnartu
 
-@admiteCero.setter
-Zero onartzen du (self, Zero onartzen du):
-self._admiteCero = Zero onartzen du
+    @zeroOnartu.setter
+    def zeroOnartu (self, zeroOnartu):
+        self._zeroOnartu = zeroOnartu
 
-def tira (self):
-numero = aleatorioa (self._aldeak)
+    def bota (self):
+        zenbaki =  ausazkoa(self._aldeak)
 
-if not self._admiteZero:
-kopurua = zenbakia + 1
+        if not self._zeroOnartu:
+            zenbaki = zenbaki + 1
 
-return zenbakia
+        return zenbaki
 
 
-dado = Emana ()
-for i in range (10):
-print (dado.tirar ())
+
+dadoa = Dadoa()
+for i in range(10):
+    print(dadoa.bota())
 
 ```
 
@@ -674,38 +690,40 @@ Gainera, gehitu bi jokalari eta talde bat sortzeko beharrezkoa den kodea, eta ho
 
 ```python
 class Jokalaria:
-def __init__ (self, izena, posizioa, dortsala):
-self._izena = izena
-self._posicion = posizioa
-self._dortsal = dortsala
+    def __init__(self, izena, posizioa, zenbakia):
+        self._izena = izena
+        self._posizioa = posizioa
+        self._zenbakia = zenbakia
 
-def informe (self):
-return f "{self._nombre} {self._posicion} {self._dorsal}"
+    def txosten (self):
+        return f"{self._izena} {self._posizioa} {self._zenbakia}"
+
 
 class Taldea:
-def __init__ (self, izena, fundazioa, aurrekontua):
-self._izena = izena
-self._fundacion = fundacion
-self._aurrekontua = aurrekontua
-self._jugadores = []
+    def __init__ (self, izena, sortzea, aurrekontua):
+        self._izena = izena
+        self._sortzea = sortzea
+        self._aurrekontua = aurrekontua
+        self._jokalariak = []
 
-def fichaJokalaria (self, jokalaria):
-self._jugadores.append (jokalaria)
+    def jokalariaFitxatu (self, jokalaria):
+        self._jokalariak.append(jokalaria)
 
-def mostrarJokalariak (self):
-for jokalari in self._jugadores:
-print (jokalari.txostena ())
+    def jokalariakErakutsi (self):
+        for jokalaria in self._jokalariak:
+            print(jokalaria.txosten())
 
-jokalaria = jokalaria ("Maradona", "aurrelaria", 10)
-jokalaria ("Beckenbauer", "Defentsa", 4)
 
-print (jokalaria1.txostena ())
+jokalaria1 = Jokalaria("Maradona", "Aurrelari", 10)
+jokalaria2 = Jokalaria("Beckenbauer", "Defentsa", 4)
 
-equipo = Taldea ("New Team", 1983, 39944.45)
-taldea. FitxatuJokalaria (1. jokalaria)
-taldea. FitxatuJokalaria (jokalaria 2)
+print(jokalaria1.txosten())
 
-taldea.erakutsiJokalariak ()
+ekipoa = Kepa("New Team", 1983, 39944.45)
+ekipoa.jokalariaFitxatu(jokalaria1)
+ekipoa.jokalariaFitxatu(jokalaria2)
+
+ekipoa.jokalariakErakutsi()
 
 ```
 
@@ -726,65 +744,69 @@ Sortu zenbait klase barne hartzen dituen programa bat.
 Gainera, sakelakoa, ordenagailua eta laginak sortzeko behar den kodea gehitzen du.
 
 ```python
-class Gailua:
-def __init__ (self, izena, prezioa):
-self._izena = izena
-self._prezioa = prezioa
+class Dispositiboa:
+    def __init__(self, izena, prezioa):
+        self._izena = izena
+        self._prezioa = prezioa
 
-def get_izena ():
-return self._izena
+    def getIzena():
+        return self._izena
 
-def set_nombre (izena):
-self._izena = izena
+    def setIzena(izena):
+        self._izena = izena
 
-def get_prezioa ():
-return self._prezioa
+    def getPrezioa():
+        return self._prezioa
 
-def set_prezioa (prezioa):
-self._prezioa = prezioa
+    def setPrezioa(prezioa):
+        self._prezioa = prezioa
 
-def toString (self):
-return f "{self._nombre} {self._precio}";
+    def toString(self):
+        return f"{self._izena} {self._prezioa}";
 
-class Movil (Gailua):
-def __init__ (self, izena, prezioa, zenbakia):
-super () .__init__ (izena, prezioa)
-self._numero = kopurua
 
-@property
-def zenbakia (self):
-return self._zenbakia
+class Mugikorra(Dispositiboa):
+    def __init__(self, izena, prezioa, zenbakia):
+        super().__init__(izena, prezioa)
+        self._zenbakia = zenbakia
 
-@numero.setter
-def zenbakia (self, zenbakia):
-self._numero = kopurua
+    @property
+    def zenbakia(self):
+        return self._zenbakia
 
-def toString (self):
-return f "{super () .toString ()} {self._numero}"
+    @zenbakia.setter
+    def zenbakia(self, zenbakia):
+        self._zenbakia = zenbakia
 
-def deitu (zenbakia):
-print ("Deituz", zenbakia)
+    def toString(self):
+        return f"{super().toString()} {self._zenbakia}"
 
-class Ordenagailua (Gailua):
-def __init__ (self, izena, prezioa, prozesadorea):
-super () .__init__ (izena, prezioa)
-self._prozesadorea = prozesadorea
+    def deitu(zenbakia):
+        print("Deitzen", zenbakia)
 
-@property
-def prozesadorea (self):
-return self._prozesadorea
 
-@procesador.setter
-def prozesadorea (self, prozesadorea):
-self._prozesadorea = prozesadorea
+class Ordenagailua(Dispositiboa):
+    def __init__(self, izena, prezioa, prozesadorea):
+        super().__init__(izena, prezioa)
+        self._prozesadorea = prozesadorea
 
-def toString (self):
-return f "{super () .toString ()} {self._prozesadorea}"
+    @property
+    def prozesadorea(self):
+        return self._prozesadorea
 
-ordenagailua = Ordenagailua ("Dell", 4553.4, "Lentium 4")
-telefonoa = Mugikorra ("Chanmhung", 434.4, 665745345)
-print ("Ordenagailua:", ordenadorea. ToString ())
-print ("Telefonoa:", telefonoa.toString ())
+    @prozesadorea.setter
+    def prozesadorea(self, prozesadorea):
+        self._prozesadorea = prozesadorea
+
+    def toString(self):
+        return f"{super().toString()} {self._prozesadorea}"
+
+
+ordenagailua = Ordenagailua("Dell", 4553.4, "Lentium 4")
+telefonoa = Mugikorra("Chanmhung", 434.4, 665745345)
+
+print("Ordenagailua:", ordenagailua.toString())
+print("Telefonoa:", telefonoa.toString())
 ```
 
 Emaitza:
@@ -811,95 +833,99 @@ Gainera, erantsi behar den kodea instantzia hauek sortzeko: `Fruta, `Carameloa, 
 
 ```python
 class Janaria:
-def __init__ (self, izena, pisua):
-self._izena = izena
-self._pisua = pisua
+    def __init__(hau, izena, pisua):
+        hau._izena = izena
+        hau._pisua = pisua
 
-@property
-def izena (self):
-return self._izena
+    @property
+    def izena (hau):
+        return hau._izena
 
-@nombre.setter
-def izena (self, izena):
-self._izena = izena
+    @izena.setter
+    def izena (hau, izena):
+        hau._izena = izena
 
-@property
-def pisua (self):
-return self._pisua
+    @property
+    def pisua (hau):
+        return hau._pisua
 
-@peso.setter
-def pisua (self, pisua):
-self._pisua = pisua
+    @pisua.setter
+    def pisua (hau, pisua):
+        hau._pisua = pisua
 
-def toString (self):
-return f "{self._nombre} {self._peso}"
+    def toString (hau):
+        return f"{hau._izena} {hau._pisua}"
 
-class Fruta (Janaria):
-def __init__ (self, izena, pisua, bitamina):
-super () .__init__ (izena, pisua)
-self._vitamina = bitamina
 
-@property
-def bitamina (self):
-return self._bitamina
+class Fruta(Janaria):
+    def __init__(hau, izena, pisua, bitamina):
+        super().__init__(izena, pisua)
+        hau._bitamina = bitamina
 
-@vitamina.setter
-def bitamina (self, bitamina):
-self._vitamina = bitamina
+    @property
+    def bitamina (hau):
+        return hau._bitamina
 
-def toString (self):
-return f "{super () .toString ()} {self._vitamina}"
+    @bitamina.setter
+    def bitamina (hau, bitamina):
+        hau._bitamina = bitamina
 
-class Gozokia (Bazkaria):
-def __init__ (self, izena, pisua, kaloriak):
-super () .__init__ (izena, pisua)
-self._calorias = calorias
+    def toString (hau):
+        return f'{super().toString()} {hau._bitamina}'
 
-@property
-def calorias (self):
-return self._kaloriak
 
-@calorias.setter
-def calorias (self, alorias):
-self._calorias = calorias
+class Goxokia(Janaria):
+    def __init__(hau, izena, pisua, kaloria):
+        super().__init__(izena, pisua)
+        hau._kaloria = kaloria
 
-def toString (self):
-return f "{super () .toString ()} {self._calorias}"
+    @property
+    def kaloria (hau):
+        return hau._kaloria
 
-class Zesta:
-def __init__ (self):
-self._alimentos = []
+    @kaloria.setter
+    def kaloria (hau, kaloria):
+        hau._kaloria = kaloria
 
-def meterJanaria (self, janaria):
-self._alimentos.append (janaria)
+    def toString (hau):
+        return f'{super().toString()} {hau._kaloria}'
 
-def pisuaGuztira (self):
-guztira = 0
-for elikagai in self._alimentos:
-guztira + = elikagaia.pisua
 
-erreturn osoa
+class Saskia:
+    def __init__(hau):
+        hau._janariak = []
 
-def toString (self):
-info = "
-for elikagai in self._alimentos:
-info = info + alimento.toString () + "\n"
+    def sartuJanaria (hau, janari):
+        hau._janariak.append(janari)
 
-return info
+    def pisuGuztira (hau):
+        guztira = 0
+        for janaria in hau._janariak:
+            guztira += janaria.pisua
 
-chicle = Gozokia ("Cheiw", 0.2, 100)
-gominola = Gozokia ("Marrubia", 0.3, 210)
-pera = Fruta ("Udarea", 0.1, "B")
-sagarra = fruta ("Sagarra", 0.15, "A")
+        return guztira
 
-cesta = Saskia ()
-cesta.meterJanaria (txiklea)
-cesta.meterJanaria (gominola)
-cesta.meterJanaria (udarea)
-cesta.meterJanaria (sagarra)
+    def toString (hau):
+        informazioa = ""
+        for janaria in hau._janariak:
+            informazioa = informazioa + janaria.toString() + "\n"
 
-print ("Saski-edukia:", saskia.toString ())
-print ("Pisua guztira:", zesta.pisua guztira ())
+        return informazioa
+
+
+txintxa = Goxokia("Cheiw", 0.2, 100)
+gominoa = Goxokia("Fresa", 0.3, 210)
+udarea = Fruta("Pera", 0.1, "B")
+sagarra = Fruta("Manzana", 0.15, "A")
+
+saskia = Saskia()
+saskia.sartuJanaria(txintxa)
+saskia.sartuJanaria(gominoa)
+saskia.sartuJanaria(udarea)
+saskia.sartuJanaria(sagarra)
+
+print("Saskiaren edukia:", saskia.toString())
+print("Pisua guztira:", saskia.pisuGuztira())
 
 ```
 
